# internal/content_admin/delivery/http/http.go
@@ -504,7 +504,7 @@ func (h *ContentAdminHandler) CreateUser(w http.ResponseWriter, r *http.Request)
 // @Produce json
 // @Param id path string true "UserID"
 // @Success 200 {object} map[string]interface{}
-// @Router /admin/user/{id} [get]
+// @Router /admin/users/{id} [get]
 func (h *ContentAdminHandler) GetUserInfo(w http.ResponseWriter, r *http.Request) {
 	userID := chi.URLParam(r, "id")
 	res, err := h.uc.GetUserInfo(r.Context(), userID)
